[artf542682] Admin UI code review  - trim the long content in Archetype,alignment issue in pilot project Description page.                                      i18 string value in Archetype.

--- a/phresco-service-web/src/main/webapp/admin/theme/photon/css/phresco.css
+++ b/phresco-service-web/src/main/webapp/admin/theme/photon/css/phresco.css
@@ -2219,6 +2219,10 @@ input[class *='sample'] {
 	float: right;
 }
 
+.descwidth {
+   width: 35%;
+}
+
 div[class *='syncTable']  {
 	margin-top: 4px;
 }
